--- a/docker/debezium-services.yaml
+++ b/docker/debezium-services.yaml
@@ -29,6 +29,14 @@ services:
     networks:
       - mongo-net
     restart: always
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
     
 networks:
   mongo-net:
